build: add testing deps
Dependencies added:
- @types/jest
- jest
- ts-jest

--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "keywords": [],
   "license": "MIT",
   "devDependencies": {
-    "@changesets/cli": "^2.26.0"
+    "@changesets/cli": "^2.26.0",
+    "@types/jest": "^29.4.0",
+    "jest": "^29.4.3",
+    "ts-jest": "^29.0.5"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
