--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
-    "@vercel/node": "^2.9.8"
+    "@vercel/node": "^2.9.8",
+    "zod": "^3.20.6"
   }
 }
